--- a/contribution/lang/ko.json
+++ b/contribution/lang/ko.json
@@ -1064,7 +1064,7 @@
  	 	 	},
  	 	 	"stallShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "내 마구간",
+ 	 	 	 	 	"trans": "내 판매대",
  	 	 	 	 	"eng": "My Stall"
  	 	 	 	}
  	 	 	},
@@ -1874,11 +1874,11 @@
  	 	 	 	 	"eng": "Please insert Calibration Core"
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "장비를 업그레이드하려면 교정 코어를 삽입해야합니다.",
+ 	 	 	 	 	"trans": "장비를 강화하려면 교정 코어를 삽입해야합니다.",
  	 	 	 	 	"eng": "You need to insert Calibration Core to upgrade your equipment."
  	 	 	 	},
  	 	 	 	"noCore": {
- 	 	 	 	 	"trans": "당신은 교정 코어가 없습니다",
+ 	 	 	 	 	"trans": "교정 코어를 가지고 있지 않습니다",
  	 	 	 	 	"eng": "You don\\'t have any Calibration Core"
  	 	 	 	}
  	 	 	},
@@ -2037,15 +2037,15 @@
  	 	},
  	 	"myStallPage": {
  	 	 	"remove": {
- 	 	 	 	"trans": "제거하다",
+ 	 	 	 	"trans": "수거하기",
  	 	 	 	"eng": "remove"
  	 	 	},
  	 	 	"notIdle": {
- 	 	 	 	"trans": "이 조치를 취하려면 유휴 상태가되어야합니다",
+ 	 	 	 	"trans": "아무것도 진행하고 있지 않아야 작업을 수행할 수 있습니다",
  	 	 	 	"eng": "You must be idle to do this action"
  	 	 	},
  	 	 	"noItem": {
- 	 	 	 	"trans": "현재는 판매중인 품목이 없습니다",
+ 	 	 	 	"trans": "판매중인 품목이 없습니다",
  	 	 	 	"eng": " You current don't have any item on sale"
  	 	 	}
  	 	},
@@ -3162,11 +3162,11 @@
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation8": {
- 	 	 	"trans": "명성",
+ 	 	 	"trans": "프레스티지",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"donation9": {
- 	 	 	"trans": "명성",
+ 	 	 	"trans": "프레스티지",
  	 	 	"eng": "Prestige"
  	 	},
  	 	"moderator": {
@@ -3434,11 +3434,11 @@
  	 	"donation8": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"프레스티지\"기부 제목",
+ 	 	 	 	 	"trans": "\"프레스티지\"후원 타이틀",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3450,23 +3450,23 @@
  	 	 	 	 	"eng": "Orange Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "사용자 정의 바이오 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
- 	 	 	 	 	"trans": "프로필의 바코드 장식",
+ 	 	 	 	 	"trans": "프로필에 바코드 장식",
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱 모토를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱 이미지를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트에 더 많이 올 것입니다",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
@@ -3474,11 +3474,11 @@
  	 	"donation9": {
  	 	 	"benefits": {
  	 	 	 	"1": {
- 	 	 	 	 	"trans": "\"프레스티지\"기부 제목",
+ 	 	 	 	 	"trans": "\"프레스티지\"후원 타이틀",
  	 	 	 	 	"eng": "\"Prestige\" donation title"
  	 	 	 	},
  	 	 	 	"2": {
- 	 	 	 	 	"trans": "프로필 사진 사용자 정의 잠금 해제",
+ 	 	 	 	 	"trans": "프로필 사진 커스터마이징 가능",
  	 	 	 	 	"eng": "Unlock profile picture customization"
  	 	 	 	},
  	 	 	 	"3": {
@@ -3490,7 +3490,7 @@
  	 	 	 	 	"eng": "Pink Neon Framed Profile (with animation)"
  	 	 	 	},
  	 	 	 	"5": {
- 	 	 	 	 	"trans": "사용자 정의 바이오 잠금 해제",
+ 	 	 	 	 	"trans": "맞춤형 자기소개 작성 가능",
  	 	 	 	 	"eng": "Unlock custom bio"
  	 	 	 	},
  	 	 	 	"6": {
@@ -3498,15 +3498,15 @@
  	 	 	 	 	"eng": "Barcode decoration on profile"
  	 	 	 	},
  	 	 	 	"7": {
- 	 	 	 	 	"trans": "갱 모토를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 모토 작성 가능",
  	 	 	 	 	"eng": "Customize gang motto"
  	 	 	 	},
  	 	 	 	"8": {
- 	 	 	 	 	"trans": "갱 이미지를 사용자 정의하십시오",
+ 	 	 	 	 	"trans": "갱 이미지 업로드 가능",
  	 	 	 	 	"eng": "Customize gang image"
  	 	 	 	},
  	 	 	 	"9": {
- 	 	 	 	 	"trans": "향후 업데이트에 더 많이 올 것입니다",
+ 	 	 	 	 	"trans": "향후 업데이트시 기능 추가 예정",
  	 	 	 	 	"eng": "More coming in future update"
  	 	 	 	}
  	 	 	}
