--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -4674,7 +4674,7 @@
  	 	 	 	]
  	 	 	},
  	 	 	"name": {
- 	 	 	 	"trans": "Terminale",
+ 	 	 	 	"trans": "Terminal",
  	 	 	 	"eng": "Terminal"
  	 	 	},
  	 	 	"tut": {
@@ -6042,7 +6042,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Le rapport sera envoyé automatiquement aux modérateurs. \\ nplease Ne t'utilise pas, spammer ou jouer avec le système de rapport",
+ 	 	 	"trans": "Le rapport sera envoyé automatiquement aux modérateurs. \\ nplease N'en fais pas mauvais usage, ne le spammes pas et ne joues pas avec",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
