--- a/contribution/lang/ru.json
+++ b/contribution/lang/ru.json
@@ -932,7 +932,7 @@
  	 	"modal": {
  	 	 	"changePicture": {
  	 	 	 	"confirm": {
- 	 	 	 	 	"trans": "я понимаю",
+ 	 	 	 	 	"trans": "Я понимаю",
  	 	 	 	 	"eng": "I understand"
  	 	 	 	}
  	 	 	},
@@ -1058,13 +1058,13 @@
  	 	 	},
  	 	 	"marketShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "AMADON",
+ 	 	 	 	 	"trans": "Рынок",
  	 	 	 	 	"eng": "Amadon"
  	 	 	 	}
  	 	 	},
  	 	 	"stallShortcut": {
  	 	 	 	"title": {
- 	 	 	 	 	"trans": "Мой киоск",
+ 	 	 	 	 	"trans": "Мой Прилавок",
  	 	 	 	 	"eng": "My Stall"
  	 	 	 	}
  	 	 	},
@@ -1136,17 +1136,17 @@
  	 	 	 	},
  	 	 	 	"aiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Используйте AI Core",
+ 	 	 	 	 	 	"trans": "Используйте Ядро ИИ",
  	 	 	 	 	 	"eng": "Use AI Core"
  	 	 	 	 	},
  	 	 	 	 	"description": {
- 	 	 	 	 	 	"trans": "Похоже, у вас есть несколько ядер Ai, используйте их, для автоматического выравнивания уровня AFK в соответствующей области уровня.",
+ 	 	 	 	 	 	"trans": "Похоже, у вас есть несколько ядер ИИ, используйте их, для автоматического выравнивания уровня AFK в соответствующей области уровня.",
  	 	 	 	 	 	"eng": "Looks like you have some AI Cores, use them to do AFK auto leveling in appropriate level area."
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"noAiCore": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Приобретение ядер AI",
+ 	 	 	 	 	 	"trans": "Приобретение ядер ИИ",
  	 	 	 	 	 	"eng": "Acquire AI Cores"
  	 	 	 	 	},
  	 	 	 	 	"description": {
@@ -1563,7 +1563,7 @@
  	 	 	 	 	"vars": [
  	 	 	 	 	 	"moneyContribution"
  	 	 	 	 	],
- 	 	 	 	 	"trans": "${moneyContribution} биджет",
+ 	 	 	 	 	"trans": "${moneyContribution} бюджет",
  	 	 	 	 	"eng": "${moneyContribution} funding"
  	 	 	 	},
  	 	 	 	"exp": {
@@ -2374,7 +2374,7 @@
  	 	}
  	},
  	"misc,durability": {
- 	 	"trans": "долговечность",
+ 	 	"trans": "прочность",
  	 	"eng": "durability"
  	},
  	"statsType": {
@@ -3591,11 +3591,11 @@
  	 	},
  	 	"aiCoreCluster": {
  	 	 	"name": {
- 	 	 	 	"trans": "Ai Core Cluster",
+ 	 	 	 	"trans": "Кластер ИИ ядер",
  	 	 	 	"eng": "AI Core Cluster"
  	 	 	},
  	 	 	"description": {
- 	 	 	 	"trans": "AI Core Cluster содержит 1000 ядер AI. можно легко собрать и разобрать.",
+ 	 	 	 	"trans": "Кластер ИИ ядер содержит 1000 ядер AI. можно легко собрать и разобрать.",
  	 	 	 	"eng": "AI Core Cluster contains 1000 AI Cores. can be easily assembled and disassembled."
  	 	 	}
  	 	},
@@ -3799,7 +3799,7 @@
  	 	},
  	 	"healing11": {
  	 	 	"name": {
- 	 	 	 	"trans": "Prestige Nano Medic Bot",
+ 	 	 	 	"trans": "Престижный лечащий нано-бот",
  	 	 	 	"eng": "Prestige Nano Medic Bot"
  	 	 	},
  	 	 	"description": {
@@ -3909,7 +3909,7 @@
  	 	},
  	 	"healingArea11": {
  	 	 	"name": {
- 	 	 	 	"trans": "Prestige Nano Medic Drone",
+ 	 	 	 	"trans": "Престижный медицинский дрон",
  	 	 	 	"eng": "Prestige Nano medic drone"
  	 	 	},
  	 	 	"description": {
@@ -4120,7 +4120,7 @@
  	 	 	 	"vars": [
  	 	 	 	 	"percent"
  	 	 	 	],
- 	 	 	 	"trans": "Калибровка Ai Shard (${percent}%)",
+ 	 	 	 	"trans": "Калибровочный фрагмент ИИd (${percent}%)",
  	 	 	 	"eng": "Calibration AI Shard (${percent}%)"
  	 	 	}
  	 	},
@@ -4765,7 +4765,7 @@
  	 	"blackMarket": {
  	 	 	"defaultLines": {
  	 	 	 	"trans": [
- 	 	 	 	 	"Hey kid, wanna make some quick bucks?"
+ 	 	 	 	 	"Эй, парень, хочешь быстро заработать?"
  	 	 	 	],
  	 	 	 	"eng": [
  	 	 	 	 	"Hey kid, wanna make some quick bucks?"
@@ -4776,7 +4776,7 @@
  	 	 	 	"eng": "Black Market"
  	 	 	},
  	 	 	"npcName": {
- 	 	 	 	"trans": "Нуль",
+ 	 	 	 	"trans": "Ноль",
  	 	 	 	"eng": "Zero"
  	 	 	}
  	 	},
@@ -5152,7 +5152,7 @@
  	 	},
  	 	"aiCoreCluster": {
  	 	 	"name": {
- 	 	 	 	"trans": "Ai Core Cluster",
+ 	 	 	 	"trans": "Кластер ИИ ядер",
  	 	 	 	"eng": "AI Core Cluster"
  	 	 	}
  	 	},
@@ -5762,7 +5762,7 @@
  	 	},
  	 	"block": {
  	 	 	"title": {
- 	 	 	 	"trans": "Вы уверены, что хотите заблокировать этот игрок?",
+ 	 	 	 	"trans": "Вы уверены, что хотите заблокировать этого игрока?",
  	 	 	 	"eng": "Are you sure you want to block this player?"
  	 	 	}
  	 	},
@@ -6069,7 +6069,7 @@
  	"gang": {
  	 	"permission": {
  	 	 	"invite": {
- 	 	 	 	"trans": "Приглашать",
+ 	 	 	 	"trans": "Пригласить",
  	 	 	 	"eng": "Invite",
  	 	 	 	"description": {
  	 	 	 	 	"trans": "Пригласите других игроков присоединиться к вашей банде.",
@@ -6077,10 +6077,10 @@
  	 	 	 	}
  	 	 	},
  	 	 	"kick": {
- 	 	 	 	"trans": "Пинать",
+ 	 	 	 	"trans": "Вигнать",
  	 	 	 	"eng": "Kick",
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Наденьте других игроков из вашей банды.",
+ 	 	 	 	 	"trans": "Выгоните других игроков из вашей банды.",
  	 	 	 	 	"eng": "Kick other players from your gang."
  	 	 	 	}
  	 	 	},
