--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -5939,7 +5939,7 @@
  	 	 	},
  	 	 	"goodReview": {
  	 	 	 	"title1": {
- 	 	 	 	 	"trans": "Wow ! Merci beaucoup ! Je suis honoré, peux-tu le rendre officiel en laissant l'avis sur le Play Store :) ?",
+ 	 	 	 	 	"trans": "Wow ! Merci beaucoup ! Je suis honoré, peux-tu le rendre officiel en laissant l'avis sur le Store :) ?",
  	 	 	 	 	"eng": "Wow, thanks so much! I'm honored, please make it official by leaving them on our store page :)"
  	 	 	 	},
  	 	 	 	"title2": {
@@ -6029,7 +6029,7 @@
  	},
  	"dungeonList": {
  	 	"newbieTip": {
- 	 	 	"trans": "Tu ne guérireas pas après chaque combat dans le donjon, n'oublie pas d'utiliser tes objets de guérison.",
+ 	 	 	"trans": "Tu ne seras pas guéri après chaque combat dans le donjon, penses à utiliser tes objets de guérison.",
  	 	 	"eng": "You will not heal after each fight in dungeon, remember to use your healing items."
  	 	}
  	},
@@ -6042,7 +6042,7 @@
  	 	 	"eng": "reporting ${playerName}"
  	 	},
  	 	"description": {
- 	 	 	"trans": "Le rapport sera envoyé automatiquement aux modérateurs. \\ nplease Ne t'utilise pas, spammer ou jouer avec le système de rapport",
+ 	 	 	"trans": "Le rapport sera envoyé automatiquement aux modérateurs. \\ nVeuillez ne pas faire d'abus, de spamming ou jouer avec le système de rapport.",
  	 	 	"eng": "Report will be sent to moderators automatically. \\nPlease do not misuses, spamming or play with the report system"
  	 	},
  	 	"textInput": {
