--- a/contribution/lang/fr.json
+++ b/contribution/lang/fr.json
@@ -137,12 +137,12 @@
  	 	 	 	 	}
  	 	 	 	},
  	 	 	 	"description": {
- 	 	 	 	 	"trans": "Tu as trouvé une boîte à butin verrouillée avec des interrupteurs colorés, tu dois être capable de la déverrouiller avec la bonne séquence de couleurs.",
+ 	 	 	 	 	"trans": "Tu as trouvé une boîte à butin verrouillée avec un clavier de couleurs, tu devrais pouvoir la déverrouiller avec la bonne séquence de couleurs.",
  	 	 	 	 	"eng": "You found a locked loot box with color keypad, you should be able to unlock it with the correct sequence of colors."
  	 	 	 	},
  	 	 	 	"progress": {
  	 	 	 	 	"title": {
- 	 	 	 	 	 	"trans": "Progression",
+ 	 	 	 	 	 	"trans": "Déverrouiller la progression",
  	 	 	 	 	 	"eng": "Unlock progress"
  	 	 	 	 	}
  	 	 	 	},
@@ -313,11 +313,11 @@
  	 	 	 	"eng": "Links are not allowed"
  	 	 	},
  	 	 	"spamBlock": {
- 	 	 	 	"trans": "N'envoie pas de message sans signification, merci. Les spammers seront mis en sourdine.",
+ 	 	 	 	"trans": "Veuillez ne pas envoyer de messages sans signification, les spammers seront mis en sourdine.",
  	 	 	 	"eng": "Please do not send meaningless message, spams will be muted."
  	 	 	},
  	 	 	"repeatBlock": {
- 	 	 	 	"trans": "N'envoie pas le même message à plusieurs reprises, merci. Les spammers seront mis en sourdine.",
+ 	 	 	 	"trans": "Veuillez ne pas envoyer le même message à plusieurs reprises, les spammers seront mis en sourdine.",
  	 	 	 	"eng": "Please do not send the same message repeatedly, spams will be muted."
  	 	 	},
  	 	 	"shortChatBlock": {
@@ -340,7 +340,7 @@
  	 	 	 	"eng": "gang"
  	 	 	},
  	 	 	"mail": {
- 	 	 	 	"trans": "Msgs privés",
+ 	 	 	 	"trans": "Messages privés",
  	 	 	 	"eng": "mail"
  	 	 	},
  	 	 	"noti": {
@@ -432,11 +432,11 @@
  	 	 	 	}
  	 	 	},
  	 	 	"lowPrintLevelTip2": {
- 	 	 	 	"trans": "Augmente ton rang d'impression, en utilisant l'imprimante 3D, en travaillant à l'usine d'impression",
+ 	 	 	 	"trans": "Augmentez votre rang d'impression pour créer des armes plus puissantes en imprimant plus de plans.",
  	 	 	 	"eng": "Increase your Printing Rank to create more powerful weapons by printing more caches"
  	 	 	},
  	 	 	"lowPrintLevelTip3": {
- 	 	 	 	"trans": "Ou en faisant affaire au Marché Noir",
+ 	 	 	 	"trans": "Ou en imprimant automatiquement et en vendant vos plans au marché noir",
  	 	 	 	"eng": "Or by auto print and selling your caches in the Black Market"
  	 	 	},
  	 	 	"quickSlots": {
